Fixed some link text, image alts and an overflow-x issue.

--- a/scss/main.css
+++ b/scss/main.css
@@ -24,6 +24,7 @@ body {
 body {
   background-color: #999; /*Alt. 999,CC9*/
   margin: 5px;
+  overflow-x: hidden;
 }
 
 h2 {
